<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lwr_comms_client</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nikunjparmar828@gmail.com">bwidemo</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <!-- Build dependencies -->
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- <exec_depend>pyyaml</exec_depend> -->
  <!-- <exec_depend>websockets</exec_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
